--- a/apps/starter/src/views/customiser/DocumentFields.scss
+++ b/apps/starter/src/views/customiser/DocumentFields.scss
@@ -7,7 +7,7 @@
     }
 
     &__sidebar {
-      padding: calc(var(--base) * 0.5);
+      padding: 0;
     }
 
     &__sidebar-fields {
