--- a/apps/starter/src/views/customiser/index.scss
+++ b/apps/starter/src/views/customiser/index.scss
@@ -28,7 +28,7 @@
         max-width: 400px;
         border-left: 1px solid var(--theme-elevation-100);
         overflow-y: auto;
-        --gutter-h: 0.75rem;
+        --gutter-h: 0;
       }
     }
 
